# python-tablinum

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/tablinum/: __about__.py  __init__.py  tab_fun_dates.py  tab_fun_maths.py  tablinum.py
tests/: __init__.py  test_tab_calculation.py  test_tab_command_line.py  test_tab_contingency.py  test_tab_filter.py  test_tab_grouping.py  test_tab_help.py  test_tab_levels.py  test_tab_makers.py  test_tab_parsing.py  test_tab_poppers_and_adders.py  test_tab_roller.py  test_tab_sort.py  test_tab_text_manip.py  test_tab_wrangler.py  test_tablinum.py
